--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
+section{
+    height: 500px;
+    padding-bottom: 250px;
+}
 .name-highlight{
     color: orange;
 }
@@ -21,9 +31,6 @@ h1{
     background-image: url("images/top-banner.png");
     background-repeat: no-repeat;
 }
-section{
-    height: 500px;
-}
 .link-button{
     text-decoration: none;
     background: linear-gradient(45deg, lightsalmon, tomato);
@@ -31,4 +38,9 @@ section{
     border-radius: 5px;
     color: white;
     font-weight: 700;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
 }
