--- a/style.css
+++ b/style.css
@@ -12,8 +12,13 @@ p{
     color: dimgray;
 }
 section{
-    height: 500px;
+    height: 500px;  
+}
+.padding{
     padding-bottom: 150px;
+}
+.padding-100{
+    padding-bottom: 60px;
 }
 .name-highlight{
     color: orange;
